--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 permalink: /:year/:month/:day/:title/
 # this sets the style for permalinks. The date formatting (/:year/:month/:day/) will only apply to blog posts, while the pages will just show the title.
-url: http://idratherbewriting.com
+url: syncleus.github.io baseurl: /apex
 # where you plan to publish your site
 baseurl: "/documentation-theme-jekyll"
 # any subdirectory that appears after the domain where you're publishing your site
@@ -12,13 +12,13 @@ site_title: Jekyll theme for designers
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 company_name: Your company
 # this appears in the footer
-github_editme_path: tomjohnson1492/documentation-theme-jekyll/edit/reviews
+github_editme_path: syncleus/apex/edit/reviews
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
-disqus_shortname: idrbwjekyll
+disqus_shortname: freemo
 # if you're using disqus for comments, add the shortname here. if not, leave this value blank.
-host: 127.0.0.1
+#host: 127.0.0.1
 # the preview server used. Leave as is.
-port: 4009
+#port: 4009
 # the port where the preview is rendered. You can leave this as is unless you have other Jekyll builds using this same port that might cause conflicts.
 
 exclude:
@@ -81,3 +81,4 @@ defaults:
 
 description: "Intended as a documentation theme based on Jekyll for technical writers documenting software and other technical products, this theme has all the elements you would need to handle multiple products with both multi-level sidebar navigation, tags, and other documentation features."
 # the description is used in the feed.xml file
+url: tomjohnson1492.github.io baseurl: /myreponame
