--- a/_data/topnav.yml
+++ b/_data/topnav.yml
@@ -11,29 +11,29 @@ topnav:
       url: /specification/
 
 #Topnav dropdowns
-topnav_dropdowns:
-- title: Topnav dropdowns
-  subcategories:
-    - title: Jekyll Resources
-      items:
-        - title: Github Repo
-          external_url: https://github.com/tomjohnson1492/documentation-theme-jekyll
-        - title: Jekyll Talk
-          external_url: https://talk.jekyllrb.com
-        - title: Jekyll documentation
-          external_url: http://jekyllrb.com/docs/home/
-        - title: Jekyll on Stack Overflow
-          external_url: http://stackoverflow.com/questions/tagged/jekyll
-        - title: Jekyll on my blog
-          external_url: http://idratherbewriting.com/category-jekyll/
-    - title: Products
-      items:
-        - title: Jekyll Documentation Theme
-          url: /mydoc_introduction/
-        - title: Product 1
-          url: /p1_landing_page/
-        - title: Product 2
-          url: /p2_landing_page/
+#topnav_dropdowns:
+#- title: Topnav dropdowns
+#  subcategories:
+#    - title: Jekyll Resources
+#      items:
+#        - title: Github Repo
+#          external_url: https://github.com/tomjohnson1492/documentation-theme-jekyll
+#        - title: Jekyll Talk
+#          external_url: https://talk.jekyllrb.com
+#        - title: Jekyll documentation
+#          external_url: http://jekyllrb.com/docs/home/
+#        - title: Jekyll on Stack Overflow
+#          external_url: http://stackoverflow.com/questions/tagged/jekyll
+#        - title: Jekyll on my blog
+#          external_url: http://idratherbewriting.com/category-jekyll/
+#    - title: Products
+#      items:
+#        - title: Jekyll Documentation Theme
+#          url: /mydoc_introduction/
+#        - title: Product 1
+#          url: /p1_landing_page/
+#        - title: Product 2
+#          url: /p2_landing_page/
 
 
 
