Changed the name of the path page to path selection.

--- a/_data/sidebars/paradigm_sidebar.yml
+++ b/_data/sidebars/paradigm_sidebar.yml
@@ -11,7 +11,7 @@ entries:
     - title: Reasoning
       url: /paradigm/
       output: web
-    - title: Path
+    - title: Path Selection
       url: /paradigm/path/
       output: web
     - title: Beacon
