--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -5,22 +5,19 @@ entries:
   levels: one
   subcategories:
 
-  - title: Products
+  - title: APEX Project
     output: web
     items:
     - title: Home
       url: /
       output: web
-    - title: News
-      url: /news/
+    - title: Approval Board
+      url: /board/
       output: web
-    - title: Theme instructions
-      url: /mydoc_introduction/
+    - title: Approval Process
+      url: /approval-process/
       output: web
-    - title: Product 1
-      url: /p1_landing_page/
-      output: web
-    - title: Product 2
-      url: /p2_landing_page/
+    - title: Contact Board
+      url: /contact/
       output: web
 
