renamed one of the items on the home sidebar.

--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -11,8 +11,8 @@ entries:
     - title: Home
       url: /
       output: web
-    - title: Approval Board
-      url: /board/
+    - title: Board of Standards
+      url: /board-of-standards/
       output: web
     - title: Approval Process
       url: /approval-process/
