Added some pages that were broken links, just comming soon text.

--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -17,7 +17,7 @@ entries:
     - title: Approval Process
       url: /approval-process/
       output: web
-    - title: Contact Board
+    - title: Contact us
       url: /contact/
       output: web
 
