--- a/_data/tags.yml
+++ b/_data/tags.yml
@@ -1,10 +1,3 @@
 allowed-tags:
-  - basics
-  - content_types
-  - navigation
-  - formatting
-  - publishing
-  - single_sourcing
-  - special_layouts
-  - collaboration
-  - news
+  - rfc
+  - accepted
