Changed the name of one of the sections.

--- a/_data/sidebars/protocol_sidebar.yml
+++ b/_data/sidebars/protocol_sidebar.yml
@@ -8,7 +8,7 @@ entries:
   - title: Introduction
     output: web
     items:
-    - title: Abstract
+    - title: Overview
       url: /protocol/
       output: web
     - title: APRS Limitations
