Removed install page from the software sidebar, temporarily.

--- a/_data/sidebars/software_sidebar.yml
+++ b/_data/sidebars/software_sidebar.yml
@@ -14,9 +14,9 @@ entries:
     - title: Download
       url: /software/download/
       output: web
-    - title: Install
-      url: /software/install/
-      output: web
+#    - title: Install
+#      url: /software/install/
+#      output: web
     - title: Configuring
       url: /software/configure/
       output: web
