Renamed main page title in the paradigm sidebar.

--- a/_data/sidebars/paradigm_sidebar.yml
+++ b/_data/sidebars/paradigm_sidebar.yml
@@ -8,7 +8,7 @@ entries:
   - title: Broadcasting
     output: web
     items:
-    - title: Reasoning
+    - title: Overview
       url: /paradigm/
       output: web
     - title: Path Selection
